--- a/index.css
+++ b/index.css
@@ -1,9 +1,51 @@
-body{
-    background:black;
-    overflow:hidden;
-    margin:0;
-  }
-  canvas{
-    background:#000;
-  }
-  
+body {
+  background: black;
+  overflow: hidden;
+  margin: 0;
+}
+
+canvas {
+  background: #000;
+}
+
+.time {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  color: #fff;
+  font-size: 5vw;
+}
+
+.content {
+  position: fixed;
+  top: 12vh;
+  left: calc(50% - 15vh);
+  width: 30vh;
+  /* height: 60vh; */
+  color: #fff;
+  text-align: center;
+}
+
+.content .lt,
+.content .birth {
+  text-shadow:
+    #00a6ff 0.1vh 0.1vh 0,
+    #00a6ff 0.2vh 0.2vh 0,
+    #00a6ff 0.3vh 0.3vh 0,
+    #00a6ff 0.4vh 0.4vh 0,
+    #00a6ff 0.5vh 0.5vh 0,
+    #00a6ff 0.6vh 0.6vh 0,
+    #00a6ff 0.7vh 0.7vh 0,
+    #00a6ff 0.8vh 0.8vh 0,
+    #00a6ff 0.9vh 0.9vh 0,
+    #00a6ff 1vh 1vh 0;
+  font-size: 10vh;
+  font-weight: bolder;
+}
+
+.content .birth {
+  position: relative;
+  left: calc(50% - 6vh);
+  width: 12vh;
+  font-size: 12vh;
+}
